--- a/website/pages/templates/projects.html
+++ b/website/pages/templates/projects.html
@@ -1,10 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}Welcome to bresgeorge.com{% endblock %}
+{% block content %}
+
+
+<div class="mt-10">
+    <ul class="list-decimal">
+        <li>
+            <p class="text-lg font-semibold " ><a class="text-red-700" href="{% url 'about' %}">Nihilist Arby's Wall Art
+ </a></p>
+            <p class="">#web design <span class="">#2019</span> </p>
+
+        </li>
+          <li>
+            <p class="text-lg font-semibold " > casamania</p>
+            <p class="">#web design</p>
+        </li>
+          <li>
+            <p class="text-lg font-semibold " > miow</p>
+            <p class="">#web design</p>
+        </li>
+          <li>
+            <p class="text-lg font-semibold " >  interior</p>
+            <p class="">#web design</p>
+        </li>
+          <li>
+            <p class="text-lg font-semibold " > Nihilist Arby's Wall Art</p>
+            <p class="">#web design</p>
+        </li>
+    </ul>
+</div>
+
+<h1>A Web Page</h1>
+<p id="demo">A Paragraph</p>
+<button type="button" onclick="myFunction()">Try it</button>
+
+<script>
+function myFunction() {
+ document.getElementById("demo").innerHTML = "Paragraph changed.";
+}
+</script>
+
+{% endblock %}
 
 </body>
 </html>
