--- a/website/pages/templates/projects.html
+++ b/website/pages/templates/projects.html
@@ -41,10 +41,31 @@
  -->
 
 
-<div class="grid grid-cols-3 gap-4">
-  <div>1</div>
-  <!-- ... -->
-  <div>9</div>
+<div class="grid grid-cols-2 mt-10">
+  <div>
+    <ul class="list-decimal">
+      <li><a class="text-red-700 text-lg font-semibold 0" onmouseover = "show()" onmouseout="hide()" href="{% url 'about' %}">
+    Nihilist Arby's Wall Art</a></li>
+      <li><a class="text-red-700 text-lg font-semibold " onmouseover = "show()" onmouseout="hide()" href="{% url 'about' %}">
+    Nihilist Arby's Wall Art</a></li>
+      <li><a class="text-red-700 text-lg font-semibold " onmouseover = "show()" onmouseout="hide()" href="{% url 'about' %}">
+    Nihilist Arby's Wall Art</a></li>
+      <li><a class="text-red-700 text-lg font-semibold " onmouseover = "show()" onmouseout="hide()" href="{% url 'about' %}">
+    Nihilist Arby's Wall Art</a></li>
+      <li><a class="text-red-700 text-lg font-semibold " onmouseover = "show()" onmouseout="hide()" href="{% url 'about' %}">
+    Nihilist Arby's Wall Art</a></li>
+      <li><a class="text-red-700 text-lg font-semibold " onmouseover = "show()" onmouseout="hide()" href="{% url 'about' %}">
+    Nihilist Arby's Wall Art</a></li>
+      <li><a class="text-red-700 text-lg font-semibold " onmouseover = "show()" onmouseout="hide()" href="{% url 'about' %}">
+    Nihilist Arby's Wall Art</a></li>
+
+
+    </ul>
+
+</div>
+  <div>
+    <img src="{% static 'images/ai.png' %}"  class="object-cover  w-4/5 border-double border-4 border-red-700" style="visibility:hidden" id = "img1" >
+</div>
 </div>
 
 
