--- a/website/pages/templates/blog.html
+++ b/website/pages/templates/blog.html
@@ -1,10 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}Welcome to bresgeorge.com{% endblock %}
+{% block content %}
+
+
+
+
+<div class="sm:pt-10 leading-relaxed  flex flex-col mb-4">
+
+
+
+    {% if all_posts %}
+        {% for x in all_posts %}
+    <!-- component -->
+    <div class="flex flex-col px-10 pb-20 max-w-3xl ">
+
+        <div class="flex justify-between items-center">
+            <span class="font-light ">{{ x.pub_date  }}</span>
+            <a class="px-2 py-1  text-red-700  " href="#">#web design</a>
+        </div>
+
+        <div class="">
+            <img src="{{x.image.url}}" class="bg-contain ">
+        </div>
+        <div class="mt-2">
+            <a class="text-2xl text-gray-700 font-bold hover:text-gray-600" href="#">{{ x.title  }}</a>
+            <p class="mt-2 text-gray-600">{{ x.body  }}</p>
+        </div>
+        <div class="flex justify-between items-center mt-4">
+            <a class="text-blue-600 hover:underline" href="#">Read more</a>
+        </div>
+
+    </div>
+
+         {% endfor%}
+    {% endif %}
+
+
+</div>
+
+
+
+{% endblock %}
 
 </body>
 </html>
