--- a/website/pages/templates/projects.html
+++ b/website/pages/templates/projects.html
@@ -8,7 +8,7 @@
 
 <div class="sm:pt-10 leading-relaxed  flex mb-4">
 
-  <div class="w-1/3 ">
+  <div class="w-1/5 ">
       <ul class="list-disc">
 
       <li>
@@ -21,8 +21,8 @@
       </ul>
   </div>
 
-  <div class="w-2/3 ">
-      <img src="{% static 'images/ai.png' %}"  id="img1"  alt="" style="visibility: hidden; " class=" object-cover w-4/5 border-double border-4 border-red-700">
+  <div class="w-4/5 ">
+      <img src="{% static 'images/ai.png' %}"  id="img1"  alt="" style="visibility: hidden; " class=" object-cover  w-2/3 ml-10 xl:w-2/5 xl:ml-0 border-double border-4 border-red-700">
  </div>
 
 
@@ -30,6 +30,8 @@
 
 
 </div>
+
+
 
 <script >
 
