--- a/website/pages/templates/blog.html
+++ b/website/pages/templates/blog.html
@@ -3,12 +3,7 @@
 {% block title %}Welcome to bresgeorge.com{% endblock %}
 {% block content %}
 
-
-
-
 <div class="sm:pt-10 leading-relaxed  flex flex-col mb-4">
-
-
 
     {% if all_posts %}
         {% for x in all_posts %}
@@ -42,6 +37,38 @@
 
 
 {% endblock %}
+{% block sidebar%}
+
+<div>
+    <div class="fixed top-0 mt-64 pt-16 ">
+        <p class="font-medium text-xl pb-2">The Tags</p>
+        <ul>
+            <li class="text-red-700 font-mono">
+                <a class="text-red-700 hover:underline pr-2 " href="{% url 'projects' %}">#Web Design</a>
+            </li>
+             <li class="text-red-700 font-mono">
+                 <a class="text-red-700 hover:underline pr-2 " href="{% url 'projects' %}">#Machine Learnig</a>
+
+            </li>
+             <li class="text-red-700 font-mono">
+                 <a class="text-red-700 hover:underline pr-2 l" href="{% url 'projects' %}">#The Sea</a>
+
+            </li>
+             <li class="text-red-700 font-mono">
+                 <a class="text-red-700 hover:underline pr-2 " href="{% url 'projects' %}">#Apps</a>
+
+            </li>
+        </ul>
+
+    </div>
+</div>
+
+
+
+{% endblock%}
+
+
+
 
 </body>
 </html>
