--- a/website/pages/templates/blog.html
+++ b/website/pages/templates/blog.html
@@ -43,18 +43,18 @@
     <div class="fixed top-0 mt-64 pt-16 ">
         <p class="font-medium text-xl pb-2">The Tags</p>
         <ul>
-            <li class="text-red-700 font-mono">
+            <li class="text-red-700 ">
                 <a class="text-red-700 hover:underline pr-2 " href="{% url 'projects' %}">#Web Design</a>
             </li>
-             <li class="text-red-700 font-mono">
+             <li class="text-red-700 ">
                  <a class="text-red-700 hover:underline pr-2 " href="{% url 'projects' %}">#Machine Learnig</a>
 
             </li>
-             <li class="text-red-700 font-mono">
+             <li class="text-red-700 ">
                  <a class="text-red-700 hover:underline pr-2 l" href="{% url 'projects' %}">#The Sea</a>
 
             </li>
-             <li class="text-red-700 font-mono">
+             <li class="text-red-700 ">
                  <a class="text-red-700 hover:underline pr-2 " href="{% url 'projects' %}">#Apps</a>
 
             </li>
