--- a/website/pages/templates/home.html
+++ b/website/pages/templates/home.html
@@ -17,7 +17,7 @@
 {% block post %}
 
 <div class="flex flex-wrap mt-24 sm:flex-no-wrap items-start">
-    <div class="flex-initial w-64 ">
+    <div class="flex-none w-64 ">
         <p class="text-xl">The Latest's</p>
     </div>
     <div class="flex-initial">
