--- a/website/pages/templates/home.html
+++ b/website/pages/templates/home.html
@@ -1,51 +1,46 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}Welcome to bresgeorge.com{% endblock %}
-{% block content %}
 
-<div class="pt-2 sm:pt-10 leading-relaxed tracking-wider text-lg">
+{% block content %}
+<!-- right part / main subject-->
+<div class="pt-2 sm:pt-10 leading-relaxed tracking-wider ">
     {% if all_items %}
-        {% for x in all_items %}
-    {% autoescape off %}
-             {{ x.body|linebreaks }}
-{% endautoescape %}
-         {% endfor%}
+            {% for x in all_items %}
+                 {% autoescape off %}
+                 {{ x.body|linebreaks }}
+                 {% endautoescape %}
+             {% endfor%}
     {% endif %}
 </div>
 {% endblock %}
 
 {% block post %}
-
-<div class="flex flex-wrap mt-24 sm:flex-no-wrap items-start">
-    <div class="flex-none w-64 ">
+<!-- left & right -->
+<div class="flex flex-wrap mt-24 sm:flex-no-wrap ">
+<!-- left part -->
+    <div class="flex-none w-56 ">
         <p class="text-xl">The Latest's</p>
     </div>
+<!-- right part -->
     <div class="flex-initial">
-           {% if latest_post %}
-     <!-- component -->
-    <div class="flex flex-col  pb-20 max-w-lg ">
-
-        <div class="flex justify-between items-center">
-            <span class="font-light ">{{ latest_post.pub_date  }}</span>
-            <a class="px-2 py-1  text-red-700  " href="#">#web design</a>
+    {% if latest_post %}
+        <div class="flex flex-col pb-20 max-w-lg">
+            <div class="flex justify-between items-center">
+                <span class="font-light">{{ latest_post.pub_date }}</span>
+                <a class="px-2 py-1 text-red-700" href="#">#{{ latest_post.tags }}</a>
+            </div>
+            <div>
+                <img src="{{ latest_post.image.url }}" class="bg-cover ">
+            </div>
+            <div class="mt-2">
+                <a class="text-lg font-semibold " href="#">{{ latest_post.title  }}</a>
+                <p class="mt-2  leading-relaxed ">{{ latest_post.body|truncatewords:15  }}</p>
+            </div>
         </div>
-
-        <div class="">
-            <img src="{{ latest_post.image.url }}" class="bg-contain ">
-        </div>
-        <div class="mt-2">
-            <a class="text-xl font-semibold " href="#">{{ latest_post.title  }}</a>
-            <p class="mt-2 text-lg leading-relaxed ">{{ latest_post.body  }}</p>
-        </div>
-
-
+    {% endif %}
     </div>
-
-     {% endif %}
-
-     </div>
 </div>
-
 {% endblock %}
 
 
