--- a/website/pages/templates/projects.html
+++ b/website/pages/templates/projects.html
@@ -1,51 +1,36 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}Welcome to bresgeorge.com{% endblock %}
+
 {% block content %}
 
-
-
-
-<div class="sm:pt-10 leading-relaxed  flex mb-4">
-
-  <div class="w-1/5 ">
-      <ul class="list-disc">
-
-      <li>
-          <a href="" class="hover:underline text-lg" onmouseover="show()" onmouseout="hide()">miou13.gr</a>
-      </li>
-      <li>
-          <a href="" class="hover:underline text-lg" onmouseover="show()" onmouseout="hide()">miou13.gr</a>
-      </li>
-
-      </ul>
-  </div>
-
-  <div class="w-4/5 ">
-      <img src="{% static 'images/ai.png' %}"  id="img1"  alt="" style="visibility: hidden; " class=" object-cover  w-2/3 ml-10 xl:w-2/5 xl:ml-0 border-double border-4 border-red-700">
- </div>
-
-
-
-
-
+<div class="flex pt-10 items-start">
+<!-- left part -->
+{% for x in all_projects %}
+     {{ x.id }}
+<div class="flex-none w-56">
+          <ul class="list-none">
+              <li>
+                  <a href="" class="hover:underline text-lg" onmouseover="show()" onmouseout="hide()">{{ x.title }}</a>
+              </li>
+          </ul>
 </div>
+ <!-- right part -->
+<div class="flex-1">
+    <img src="{{ x.image.url }}" id="{{ x.id }}" style="visibility:hidden;" class="bg-cover">
+</div>
+    {% endfor %}
+</div>
+<!-- javascript -->
+<script>
+    var x=document.getElementById('2')
 
-
-
-<script >
-
-    var x=document.getElementById('img1')
     function show(){
-    x.style.visibility='visible';
-    }
-      function hide(){
-    x.style.visibility='hidden';
-    }
-
-
-
-
+                    x.style.visibility='visible';
+                    }
+    function hide(){
+                    x.style.visibility='hidden';
+                    }
 </script>
 
 {% endblock %}
