--- a/website/pages/templates/home.html
+++ b/website/pages/templates/home.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %}
+ {% extends 'base.html' %}
 {% load static %}
-{% block title %}Welcome to bresgeorge.com{% endblock %}
+{% block title %}Welcome to zwicky.com{% endblock %}
 
 {% block content %}
 <!-- right part / main subject-->
-<div class="pt-2 sm:pt-10 leading-relaxed tracking-wider ">
+<div class="lg:pt-10 leading-relaxed tracking-wider text-md">
     {% if all_items %}
             {% for x in all_items %}
                  {% autoescape off %}
@@ -17,21 +17,21 @@
 
 {% block post %}
 <!-- left & right -->
-<div class="flex flex-wrap mt-24 sm:flex-no-wrap ">
+<div class="lg:flex mt-24  ">
 <!-- left part -->
-    <div class="flex-none w-56 ">
-        <p class="text-xl">The Latest's</p>
+    <div class="flex-none lg:w-1/4 ">
+        <p class="lg:fixed text-lg pb-4">The Latest Post</p>
     </div>
 <!-- right part -->
-    <div class="flex-initial">
+    <div class="lg:w-3/4 ">
     {% if latest_post %}
-        <div class="flex flex-col pb-20 max-w-lg">
-            <div class="flex justify-between items-center">
+        <div class="pb-20 max-w-lg ">
+            <div class="flex justify-between items-start pb-1">
                 <span class="font-light">{{ latest_post.pub_date }}</span>
-                <a class="px-2 py-1 text-red-700" href="#">#{{ latest_post.tags }}</a>
+                <a class="px-2 text-blue-600" href="#">#{{ latest_post.tags }}</a>
             </div>
             <div>
-                <img src="{{ latest_post.image.url }}" class="bg-cover ">
+                <img src="{{ latest_post.image.url }}" class="bg-cover rounded-lg">
             </div>
             <div class="mt-2">
                 <a class="text-lg font-semibold " href="#">{{ latest_post.title  }}</a>
