editing the name

--- a/website/pages/templates/base.html
+++ b/website/pages/templates/base.html
@@ -14,7 +14,7 @@
 <!-- left part -->
     <div class="lg:w-1/4 ">
         <div class="lg:fixed">
-            <p class="text-2xl pt-1 font-mono font-semibold"><a class="text-blue-600" href="{% url 'home' %}">Zwicky</a></p>
+            <p class="text-2xl pt-1 font-mono font-semibold"><a class="text-blue-600" href="{% url 'home' %}">Zwiwi</a></p>
             <p class="text-sm italic px-8 font-mono pt-1">..always with a smile</p>
              <ul class="flex lg:flex-col mt-4  font-semibold">
                 <li class=" pr-2 pt-1"><a class="text-blue-600 hover:underline text-lg" href="{% url 'projects' %}">Projects</a></li>
