--- a/website/pages/templates/home.html
+++ b/website/pages/templates/home.html
@@ -1,6 +1,6 @@
  {% extends 'base.html' %}
 {% load static %}
-{% block title %}Welcome to zwicky.com{% endblock %}
+{% block title %}Welcome to zwiwi.com{% endblock %}
 
 {% block content %}
 <!-- right part / main subject-->
