--- a/website/pages/templates/base.html
+++ b/website/pages/templates/base.html
@@ -14,18 +14,18 @@
 <!-- left part -->
     <div class="lg:w-1/4 ">
         <div class="lg:fixed">
-            <p class="text-2xl pt-1 font-mono font-semibold"><a class="text-blue-600" href="{% url 'home' %}">Zwiwi</a></p>
-            <p class="text-sm italic px-8 font-mono pt-1">..always with a smile</p>
-             <ul class="flex lg:flex-col mt-4  font-semibold">
-                <li class=" pr-2 pt-1"><a class="text-blue-600 hover:underline text-lg" href="{% url 'projects' %}">Projects</a></li>
-                <li class=" pr-2 pt-1"><a class="text-blue-600 hover:underline text-lg" href="{% url 'blog' %}">Blog</a></li>
-                <li class=" pr-2 pt-1"><a class="text-blue-600 hover:underline text-lg" href="{% url 'blog' %}">Discord</a></li>
-                <li class=" pr-2 pt-1"><a class="text-blue-600 hover:underline text-lg" href="{% url 'contact' %}">Contact</a></li>
+            <p class="text-2xl pt-1 font-mono font-semibold"><a class="text-green-500" href="{% url 'home' %}">Zwiwi</a></p>
+            <p class="text-sm  px-8 font-mono pt-1">..always with a smile</p>
+             <ul class="flex lg:flex-col mt-2 font-semibold">
+                <li class="pr-2 pt-2"><a class="text-green-500 hover:underline text-lg" href="{% url 'projects' %}">Projects</a></li>
+                <li class="pr-2 pt-2"><a class="text-green-500 hover:underline text-lg" href="{% url 'blog' %}">Blog</a></li>
+                <li class="pr-2 pt-2"><a class="text-green-500 hover:underline text-lg" href="{% url 'blog' %}">Discord</a></li>
+                <li class="pr-2 pt-2"><a class="text-green-500 hover:underline text-lg" href="{% url 'contact' %}">Contact</a></li>
             </ul>
         </div>
     </div>
 <!-- right part -->
-    <div class="lg:w-3/4 lg:mt-10">
+    <div class="lg:w-3/4 pt-2 lg:mt-10">
          {% block content %} {% endblock %}
     </div>
 </div>
