--- a/website/pages/templates/base.html
+++ b/website/pages/templates/base.html
@@ -19,7 +19,7 @@
              <ul class="flex lg:flex-col mt-2 font-semibold">
                 <li class="pr-2 pt-2"><a class="text-green-500 hover:underline text-lg" href="{% url 'projects' %}">Projects</a></li>
                 <li class="pr-2 pt-2"><a class="text-green-500 hover:underline text-lg" href="{% url 'blog' %}">Blog</a></li>
-                <li class="pr-2 pt-2"><a class="text-green-500 hover:underline text-lg" href="{% url 'blog' %}">Discord</a></li>
+                <li class="pr-2 pt-2"><a class="text-green-500 hover:underline text-lg" href="{% url 'projects' %}">Discord</a></li>
                 <li class="pr-2 pt-2"><a class="text-green-500 hover:underline text-lg" href="{% url 'contact' %}">Contact</a></li>
             </ul>
         </div>
