--- a/website/pages/templates/base.html
+++ b/website/pages/templates/base.html
@@ -7,20 +7,20 @@
 </head>
 
 <body class="bg-gray-100 lg:mx-16 mx-6 font-serif tracking-wide antialiased">
-
+ 
 
 <!-- left & right -->
 <div class="mt-12 lg:flex">
 <!-- left part -->
     <div class="lg:w-1/4 ">
         <div class="lg:fixed">
-            <p class="text-2xl pt-1 font-mono font-semibold"><a class="text-green-500" href="{% url 'home' %}">Zwiwi</a></p>
+            <p class="text-2xl pt-1 font-mono font-semibold"><a class="text-indigo-500" href="{% url 'home_nav' %}">Zwiwi</a></p>
             <p class="text-sm  px-8 font-mono pt-1">..always with a smile</p>
              <ul class="flex lg:flex-col mt-2 font-semibold">
-                <li class="pr-2 pt-2"><a class="text-green-500 hover:underline text-lg" href="{% url 'projects' %}">Projects</a></li>
-                <li class="pr-2 pt-2"><a class="text-green-500 hover:underline text-lg" href="{% url 'blog' %}">Blog</a></li>
-                <li class="pr-2 pt-2"><a class="text-green-500 hover:underline text-lg" href="{% url 'projects' %}">Discord</a></li>
-                <li class="pr-2 pt-2"><a class="text-green-500 hover:underline text-lg" href="{% url 'contact' %}">Contact</a></li>
+                <li class="pr-2 pt-2"><a class="text-indigo-500 hover:underline text-md" href="{% url 'projects_nav' %}">Projects</a></li>
+                <li class="pr-2 pt-2"><a class="text-indigo-500 hover:underline text-md" href="{% url 'blog_nav' %}">Blog</a></li>
+                <li class="pr-2 pt-2"><a class="text-indigo-500 hover:underline text-md" href="{% url 'projects_nav' %}">Discord</a></li>
+                <li class="pr-2 pt-2"><a class="text-indigo-500 hover:underline text-md" href="{% url 'contact_nav' %}">Contact</a></li>
             </ul>
         </div>
     </div>
