--- a/website/pages/templates/home.html
+++ b/website/pages/templates/home.html
@@ -1,4 +1,4 @@
- {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% block title %}Welcome to zwiwi.com{% endblock %}
 
@@ -28,7 +28,7 @@
         <div class="pb-20 max-w-lg ">
             <div class="flex justify-between items-start pb-1">
                 <span class="font-light">{{ latest_post.pub_date }}</span>
-                <a class="px-2 text-green-500" href="#">#{{ latest_post.tags }}</a>
+                <a class="px-2 text-indigo-500" href="#">#{{ latest_post.tags }}</a>
             </div>
             <div>
                   <img src="{{ latest_post.image.url }}" class="bg-cover rounded-lg">
