--- a/website/pages/templates/base.html
+++ b/website/pages/templates/base.html
@@ -7,15 +7,15 @@
 </head>
 
 <body class="bg-gray-100 lg:mx-16 mx-6 font-serif tracking-wide antialiased">
- 
+
 
 <!-- left & right -->
 <div class="mt-12 lg:flex">
 <!-- left part -->
-    <div class="lg:w-1/4 ">
+    <div class="lg:w-1/5 ">
         <div class="lg:fixed">
             <p class="text-2xl pt-1 font-mono font-semibold"><a class="text-indigo-500" href="{% url 'home_nav' %}">Zwiwi</a></p>
-            <p class="text-sm  px-8 font-mono pt-1">..always with a smile</p>
+            <p class="text-sm  px-8 font-mono ">always with a smile</p>
              <ul class="flex lg:flex-col mt-2 font-semibold">
                 <li class="pr-2 pt-2"><a class="text-indigo-500 hover:underline text-md" href="{% url 'projects_nav' %}">Projects</a></li>
                 <li class="pr-2 pt-2"><a class="text-indigo-500 hover:underline text-md" href="{% url 'blog_nav' %}">Blog</a></li>
@@ -25,7 +25,7 @@
         </div>
     </div>
 <!-- right part -->
-    <div class="lg:w-3/4 pt-2 lg:mt-10">
+    <div class="lg:w-4/5 pt-2 lg:mt-10">
          {% block content %} {% endblock %}
     </div>
 </div>
