--- a/website/pages/templates/home.html
+++ b/website/pages/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <!-- right part / main subject-->
-<div class="pt-2 lg:pt-8 leading-relaxed tracking-wider text-md">
+<div class="mt-2 tracking-wide text-lg leading-relaxed ">
     {% if all_items %}
             {% for x in all_items %}
                  {% autoescape off %}
@@ -28,14 +28,15 @@
         <div class="pb-20 max-w-lg ">
             <div class="flex justify-between items-start pb-1">
                 <span class="font-light">{{ latest_post.pub_date }}</span>
-                <a class="px-2 text-green-500" href="#">#{{ latest_post.tags }}</a>
+                <a class=" text-indigo-600" href="#">#{{ latest_post.tags }} </a></span></a>
             </div>
             <div>
                   <img src="{{ latest_post.image.url }}" class="bg-cover rounded-lg">
-                                 
+
             </div>
             <div class="mt-2">
                 <a class="text-lg font-semibold" href="#">{{ latest_post.title  }}</a>
+
                 <p class="mt-2 leading-relaxed">{{ latest_post.body|truncatewords:15  }}</p>
             </div>
         </div>
